--- a/src/locale/Base.xliff
+++ b/src/locale/Base.xliff
@@ -366,10 +366,6 @@
           <context context-type="sourcefile">app/common/layout/topbar/options.component.html</context>
           <context context-type="linenumber">17</context>
         </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">64</context>
-        </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
       <trans-unit id="COMMON__LOGIN" datatype="html">
@@ -7058,10 +7054,6 @@
           <context context-type="sourcefile">app/modules/search/search.component.html</context>
           <context context-type="linenumber">198</context>
         </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">16</context>
-        </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
       <trans-unit id="SEARCH__EXPLICIT_TOOLTIP" datatype="html">
@@ -7429,83 +7421,6 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/messenger/onboarding/setup.component.html</context>
           <context context-type="linenumber">68</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__EXPLICIT_ITEM_TOOLTIP" datatype="html">
-        <source>By selecting Explicit mode, you acknowledge that you are 18+ years of age and are willing to see graphic content.</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">20</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__AUTO_ROTATE_ITEM" datatype="html">
-        <source>Auto-rotate</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">109</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__AUTO_ROTATE_ITEM_TOOLTIP" datatype="html">
-        <source>This will enable/disable the Boost box on top of your feed from self-rotating.</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">114</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__HIDE_BOOST_ITEM" datatype="html">
-        <source>Hide Boost</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">153</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">172</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__SHOW_BOOST_ITEM" datatype="html">
-        <source>Show Boost</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">159</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__BOOST_VISIBILITY_TOOLTIP" datatype="html">
-        <source>Plus users may hide Boosts from their newsfeed.</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">164</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__BOOST_VISIBILITY_UPGRADE_TOOLTIP" datatype="html">
-        <source>Upgrade to Plus in order to turn off Boost.</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">179</context>
-        </context-group>
-        <note priority="1" from="description"/>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="MINDS__NEWSFEED__BOOST_ROTATOR__ABOUT_BOOST" datatype="html">
-        <source>About Boost</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/dropdown/dropdown.component.html</context>
-          <context context-type="linenumber">187</context>
-        </context-group>
-        <note priority="1" from="meaning">ng2.template</note>
-      </trans-unit>
-      <trans-unit id="M__COMMON__BOOSTFEED" datatype="html">
-        <source>Boostfeed</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/modules/newsfeed/boost-rotator/boost-rotator.component.html</context>
-          <context context-type="linenumber">16</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10017,7 +9932,7 @@
         <source>Posts older than {$INTERPOLATION}</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/newsfeed/feeds/sorted.component.html</context>
-          <context context-type="linenumber">53</context>
+          <context context-type="linenumber">51</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -13592,7 +13507,7 @@
         <source>Estimated</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/wallet/v2/cash/balance/balance-cash.component.html</context>
-          <context context-type="linenumber">92</context>
+          <context context-type="linenumber">89</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -13600,7 +13515,7 @@
         <source>Total Transferred {$START_TAG_M-TOOLTIP} This is the total amount that has been paid out to your bank {$CLOSE_TAG_M-TOOLTIP}</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/wallet/v2/cash/balance/balance-cash.component.html</context>
-          <context context-type="linenumber">107</context>
+          <context context-type="linenumber">104</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -15393,7 +15308,7 @@
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
       <trans-unit id="SETTINGS__PRO__HASHTAGS__LABEL" datatype="html">
-        <source>Theme</source>
+        <source>Hashtags</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/settings-v2/pro/hashtags/hashtags.component.html</context>
           <context context-type="linenumber">5</context>
@@ -15839,6 +15754,110 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/settings-v2/settings-i18n-hack.component.ts</context>
           <context context-type="linenumber">51</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="SETTINGS__BOOSTED_CONTENT__LABEL" datatype="html">
+        <source>Boosted Content</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="SETTINGS__BOOSTED_CONTENT__DESCRIPTION" datatype="html">
+        <source>Control how boosted content is displayed. Learn more about {$START_LINK}boosted content{$CLOSE_LINK}.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__ENABLE" datatype="html">
+        <source>Enable Boosted Content {$START_TAG_SPAN}Minds+ Feature{$CLOSE_TAG_SPAN}</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__ENABLE_TOOLTIP" datatype="html">
+        <source>Minds+ users may hide Boosts from their newsfeed</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">33</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="COMMON__ENABLE" datatype="html">
+        <source>Enable</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">45</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">95</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">139</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="COMMON__DISABLE" datatype="html">
+        <source>Disable</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">65</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">108</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">152</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__AUTOROTATE" datatype="html">
+        <source>Boost Auto-rotation</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">84</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__AUTOROTATE_TOOLTIP" datatype="html">
+        <source>Enable/disable the Boost box on top of your feed from self-rotating</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">88</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__RATING" datatype="html">
+        <source>Open Content</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">127</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__RATING_TOOLTIP" datatype="html">
+        <source>Open may contain controversial content. By selecting Open, you acknowledge that you are willing to see controversial content.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">131</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="BOOSTED_CONTENT__SAVE_BOOST SETTINGS" datatype="html">
+        <source>Save Boost Settings</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/settings-v2/account/boosted-content/boosted-content.component.html</context>
+          <context context-type="linenumber">177</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
