--- a/src/locale/Base.xliff
+++ b/src/locale/Base.xliff
@@ -94,11 +94,11 @@
         <source>Newsfeed</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">43</context>
+          <context context-type="linenumber">44</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">47</context>
+          <context context-type="linenumber">48</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -106,11 +106,11 @@
         <source>Discovery</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">65</context>
+          <context context-type="linenumber">66</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">71</context>
+          <context context-type="linenumber">72</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -118,11 +118,11 @@
         <source>Minds+</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">90</context>
+          <context context-type="linenumber">91</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">93</context>
+          <context context-type="linenumber">94</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -130,11 +130,11 @@
         <source>Wallet</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">110</context>
+          <context context-type="linenumber">111</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">113</context>
+          <context context-type="linenumber">114</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -142,11 +142,11 @@
         <source>Analytics</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">130</context>
+          <context context-type="linenumber">131</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">136</context>
+          <context context-type="linenumber">137</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -154,7 +154,7 @@
         <source>Traffic</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">150</context>
+          <context context-type="linenumber">151</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -162,7 +162,7 @@
         <source>Engagement</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">161</context>
+          <context context-type="linenumber">162</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blockchain/marketing/rewards.component.html</context>
@@ -174,7 +174,7 @@
         <source>Earnings</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">172</context>
+          <context context-type="linenumber">173</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -182,7 +182,7 @@
         <source>Trending</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">183</context>
+          <context context-type="linenumber">184</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/discovery/trends/list-item.component.html</context>
@@ -194,11 +194,11 @@
         <source>Settings</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">200</context>
+          <context context-type="linenumber">201</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/sidebar/navigation.component.html</context>
-          <context context-type="linenumber">204</context>
+          <context context-type="linenumber">205</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/common/layout/v3-topbar/user-menu/user-menu.component.html</context>
@@ -6744,7 +6744,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">185</context>
+          <context context-type="linenumber">186</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10577,7 +10577,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">138</context>
+          <context context-type="linenumber">139</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10589,7 +10589,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">143</context>
+          <context context-type="linenumber">144</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10601,7 +10601,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">129</context>
+          <context context-type="linenumber">130</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10842,7 +10842,7 @@
         <source>SHARE</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">148</context>
+          <context context-type="linenumber">149</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10850,7 +10850,7 @@
         <source>Are you sure you want to delete this blog?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">190</context>
+          <context context-type="linenumber">191</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10858,7 +10858,7 @@
         <source>There&apos;s no UNDO!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">192</context>
+          <context context-type="linenumber">193</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -10866,7 +10866,7 @@
         <source>The blog has been deleted.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/blogs/view/view.html</context>
-          <context context-type="linenumber">196</context>
+          <context context-type="linenumber">197</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -15952,11 +15952,19 @@
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
+      <trans-unit id="DISCOVERY_TAGS__MEMBERSHIPS" datatype="html">
+        <source>Memberships</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/discovery/tabs/tabs.component.html</context>
+          <context context-type="linenumber">36</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
       <trans-unit id="DISCOVERY_TAGS__BOOSTED" datatype="html">
         <source>Boosted</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/discovery/tabs/tabs.component.html</context>
-          <context context-type="linenumber">36</context>
+          <context context-type="linenumber">45</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
@@ -16113,6 +16121,98 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
           <context context-type="linenumber">23</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__NO_CONTENT" datatype="html">
+        <source>No content</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">82</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__CHANNEL_NOT_POSTED_IMAGES" datatype="html">
+        <source>This channel hasn&apos;t posted an image yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">89</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__CHANNEL_NOT_POSTED_VIDEOS" datatype="html">
+        <source>This channel hasn&apos;t posted a video yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">95</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__CHANNEL_NOT_POSTED_BLOGS" datatype="html">
+        <source>This channel hasn&apos;t posted a blog yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">101</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__CHANNEL_NOT_POSTED_ANYTHING" datatype="html">
+        <source>This channel hasn&apos;t posted anything yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">107</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__YOU_HAVENT_POSTED__YET_GENERIC*" datatype="html">
+        <source>Looks like you haven&apos;t posted any content of this type yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">114</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">157</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__YOU_HAVENT_POSTED_IMAGES_YET" datatype="html">
+        <source>Looks like you haven&apos;t posted images yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">132</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__YOU_HAVENT_POSTED_VIDEOS_YET" datatype="html">
+        <source>Looks like you haven&apos;t posted videos yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">138</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__YOU_HAVENT_POSTED_BLOGS_YET" datatype="html">
+        <source>Looks like you haven&apos;t posted blogs yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">144</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__YOU_HAVENT_POSTED_YET" datatype="html">
+        <source>Looks like you haven&apos;t posted yet</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">150</context>
+        </context-group>
+        <note priority="1" from="meaning">ng2.template</note>
+      </trans-unit>
+      <trans-unit id="M__CHANNEL_FEED__CREATE_YOUR_FIRST_POST" datatype="html">
+        <source>Create your first post</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/modules/channels/v2/feed/feed.component.html</context>
+          <context context-type="linenumber">169</context>
         </context-group>
         <note priority="1" from="meaning">ng2.template</note>
       </trans-unit>
